--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -368,6 +368,116 @@
       }
     }
   }
+  .team_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .team_wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 48px;
+      .team_header {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 16px;
+        h1 {
+          width: 100%;
+          margin-bottom: 0;
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 48px;
+          line-height: 120%;
+          text-align: center;
+          color: #1d2130;
+        }
+        h5 {
+          width: 520px;
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 160%;
+          text-align: center;
+          color: #525560;
+          opacity: 0.6;
+          margin: 0 auto;
+        }
+      }
+      .team_members {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+        gap: 32px;
+        .team_card {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 16px;
+          .card_img {
+            width: 100%;
+            img {
+              width: 100%;
+              transition: 0.3s linear all;
+              cursor: pointer;
+              &:hover {
+                filter: brightness(80%);
+              }
+            }
+          }
+          .card_body {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 8px;
+            h1 {
+              width: 100%;
+              font-family: "Roboto", sans-serif;
+              font-style: normal;
+              font-weight: 500;
+              font-size: 20px;
+              line-height: 160%;
+              text-align: center;
+              color: #1d2130;
+            }
+            h2 {
+              width: 100%;
+              font-family: "Roboto", sans-serif;
+              font-style: normal;
+              font-weight: 500;
+              font-size: 12px;
+              line-height: 160%;
+              color: #1d2130;
+              opacity: 0.6;
+              text-align: center;
+            }
+            .social_media {
+              width: 100%;
+              margin-top: 8px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap: 20px;
+              a {
+                text-decoration: none;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @media (max-width: 1550px) {
   .about_us_page .know_about_us_section {
@@ -400,6 +510,10 @@
     padding: 96px 25px;
     padding-top: 0;
   }
+  .about_us_page .team_section {
+    padding: 96px 25px;
+    padding-top: 0;
+  }
 }
 @media (max-width: 1280px) {
   .about_us_page
@@ -417,6 +531,9 @@
   }
   .about_us_page .journey_section .journey_wrapper {
     padding-left: 30px;
+  }
+  .about_us_page .team_section .team_wrapper .team_members {
+    grid-template-columns: repeat(auto-fill, minmax(221px, 1fr));
   }
 }
 @media (max-width: 1200px) {
@@ -516,6 +633,10 @@
     padding: 30px;
     padding-right: 0;
   }
+  .about_us_page .team_section {
+    padding: 85px 20px;
+    padding-top: 0;
+  }
 }
 @media (max-width: 950px) {
   .about_us_page
@@ -604,6 +725,12 @@
     padding: 10px;
     padding-right: 0;
   }
+  .about_us_page .team_section .team_wrapper {
+    gap: 30px;
+  }
+  .about_us_page .team_section .team_wrapper .team_members {
+    gap: 20px;
+  }
 }
 @media (max-width: 750px) {
   .about_us_page .know_about_us_section {
@@ -669,6 +796,20 @@
   }
   .about_us_page .journey_section .journey_wrapper .journey_info h1 {
     font-size: 35px;
+  }
+  .about_us_page .team_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
+  .about_us_page .team_section .team_wrapper .team_header h1 {
+    font-size: 35px;
+    line-height: 100%;
+  }
+  .about_us_page .team_section .team_wrapper .team_header {
+    gap: 10px;
+  }
+  .about_us_page .team_section .team_wrapper {
+    gap: 25px;
   }
 }
 @media (max-width: 700px) {
@@ -752,6 +893,19 @@
   .about_us_page .journey_section {
     padding: 50px 10px;
   }
+  .about_us_page .team_section {
+    padding: 50px 10px;
+    padding-top: 0;
+  }
+  .about_us_page .team_section .team_wrapper .team_header h5 {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .about_us_page .team_section .team_wrapper .team_members {
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 15px;
+  }
 }
 @media (max-width: 450px) {
   .about_us_page
@@ -811,6 +965,30 @@
   .about_us_page .journey_section .journey_wrapper {
     padding: 10px;
   }
+  .about_us_page .team_section .team_wrapper .team_header h1 {
+    font-size: 30px;
+  }
+  .about_us_page .team_section .team_wrapper .team_header h5 {
+    font-size: 15px;
+  }
+  .about_us_page .team_section .team_wrapper .team_members {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .about_us_page
+    .team_section
+    .team_wrapper
+    .team_members
+    .team_card
+    .card_img
+    img {
+    height: 250px;
+  }
+  .about_us_page .team_section .team_wrapper .team_members .team_card {
+    gap: 10px;
+  }
 }
 @media (max-width: 400px) {
   .about_us_page
@@ -859,5 +1037,14 @@
   }
   .about_us_page .journey_section .journey_wrapper .journey_info .statistics {
     gap: 16px;
+  }
+  .about_us_page
+    .team_section
+    .team_wrapper
+    .team_members
+    .team_card
+    .card_img
+    img {
+    height: auto;
   }
 }
