--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -478,6 +478,61 @@
       }
     }
   }
+  .join_team_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .join_team_wrapper {
+      width: 100%;
+      height: 100%;
+      height: 384px;
+    }
+  }
+  .news_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .news_wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 48px;
+      .news_header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 24px;
+        h1 {
+          margin-bottom: 0;
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 40px;
+          line-height: 140%;
+          color: #1d2130;
+        }
+        .empty_line {
+          width: calc(100% - 299px);
+          height: 1px;
+          background-color: #e5e5e5;
+        }
+      }
+      .news_body {
+        width: 100%;
+      }
+    }
+  }
+  .events_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .events_wrapper {
+      width: 100%;
+    }
+  }
 }
 @media (max-width: 1550px) {
   .about_us_page .know_about_us_section {
@@ -511,6 +566,18 @@
     padding-top: 0;
   }
   .about_us_page .team_section {
+    padding: 96px 25px;
+    padding-top: 0;
+  }
+  .about_us_page .join_team_section {
+    padding: 96px 25px;
+    padding-top: 0;
+  }
+  .about_us_page .news_section {
+    padding: 96px 25px;
+    padding-top: 0;
+  }
+  .about_us_page .events_section {
     padding: 96px 25px;
     padding-top: 0;
   }
@@ -634,6 +701,18 @@
     padding-right: 0;
   }
   .about_us_page .team_section {
+    padding: 85px 20px;
+    padding-top: 0;
+  }
+  .about_us_page .join_team_section {
+    padding: 85px 20px;
+    padding-top: 0;
+  }
+  .about_us_page .news_section {
+    padding: 85px 20px;
+    padding-top: 0;
+  }
+  .about_us_page .events_section {
     padding: 85px 20px;
     padding-top: 0;
   }
@@ -811,6 +890,27 @@
   .about_us_page .team_section .team_wrapper {
     gap: 25px;
   }
+  .about_us_page .join_team_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
+  .about_us_page .join_team_section .join_team_wrapper {
+    height: 320px;
+  }
+  .about_us_page .news_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
+  .about_us_page .news_section .news_wrapper .news_header h1 {
+    font-size: 35px;
+  }
+  .about_us_page .news_section .news_wrapper .news_header .empty_line {
+    width: calc(100% - 265px);
+  }
+  .about_us_page .events_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
 }
 @media (max-width: 700px) {
   .about_us_page .banner_section .banner_wrapper {
@@ -900,10 +1000,43 @@
   .about_us_page .team_section .team_wrapper .team_header h5 {
     width: 100%;
   }
+  .about_us_page .join_team_section {
+    padding: 50px 10px;
+    padding-top: 0;
+  }
+  .about_us_page .join_team_section .join_team_wrapper {
+    height: 280px;
+  }
+  .about_us_page .news_section {
+    padding: 50px 10px;
+    padding-top: 0;
+  }
+  .about_us_page .news_section .news_wrapper .news_header {
+    gap: 15px;
+  }
+  .about_us_page .news_section .news_wrapper .news_header .empty_line {
+    width: calc(100% - 256px);
+  }
+  .about_us_page .events_section {
+    padding: 50px 10px;
+    padding-top: 0;
+  }
 }
 @media (max-width: 500px) {
   .about_us_page .team_section .team_wrapper .team_members {
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 15px;
+  }
+  .about_us_page .news_section .news_wrapper .news_header .empty_line {
+    display: none;
+  }
+  .about_us_page .news_section .news_wrapper .news_header h1 {
+    width: 100%;
+  }
+  .about_us_page .news_section .news_wrapper .news_header {
+    gap: 0px;
+  }
+  .about_us_page .news_section .news_wrapper {
     gap: 15px;
   }
 }
@@ -1026,6 +1159,11 @@
   }
   .about_us_page .journey_section .journey_wrapper {
     gap: 15px;
+  }
+  .about_us_page .news_section .news_wrapper .news_header h1 {
+    font-size: 30px;
+    line-height: 110%;
+    text-align: center;
   }
 }
 @media (max-width: 350px) {
