--- a/src/pages/Activity/activity.scss
+++ b/src/pages/Activity/activity.scss
@@ -67,6 +67,67 @@
       width: 480px;
     }
   }
+  .for_environment_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    background: #eff7f2;
+    .environment_wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 64px;
+      .environment_header {
+        width: 100%;
+        h1 {
+          width: 100%;
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 48px;
+          line-height: 120%;
+          color: #1d2130;
+        }
+      }
+      .environment_info {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+        gap: 48px;
+        .environment_card {
+          width: 100%;
+          display: flex;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 24px;
+          .card_info {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 8px;
+            h2 {
+              font-family: "Roboto", sans-serif;
+              font-style: normal;
+              font-weight: 700;
+              font-size: 24px;
+              line-height: 28px;
+              color: #1d2130;
+            }
+            p {
+              font-family: "Roboto", sans-serif;
+              font-style: normal;
+              font-weight: 400;
+              font-size: 14px;
+              line-height: 160%;
+              color: #525560;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 // media queries
@@ -74,9 +135,15 @@
   .activity_page .what_we_do_section {
     padding: 96px 25px;
   }
+  .activity_page .for_environment_section {
+    padding: 96px 25px;
+  }
 }
 @media (max-width: 999px) {
   .activity_page .what_we_do_section {
+    padding: 85px 20px;
+  }
+  .activity_page .for_environment_section {
     padding: 85px 20px;
   }
 }
@@ -84,9 +151,15 @@
   .activity_page .what_we_do_section {
     padding: 70px 15px;
   }
+  .activity_page .for_environment_section {
+    padding: 70px 15px;
+  }
 }
 @media (max-width: 600px) {
   .activity_page .what_we_do_section {
+    padding: 50px 10px;
+  }
+  .activity_page .for_environment_section {
     padding: 50px 10px;
   }
 }
@@ -98,6 +171,13 @@
   }
   .activity_page .what_we_do_section .what_we_do_info .info_body p {
     width: 100%;
+  }
+  .activity_page
+    .for_environment_section
+    .environment_wrapper
+    .environment_info {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 25px;
   }
 }
 @media (max-width: 1130px) {
@@ -148,6 +228,9 @@
   }
   .activity_page .what_we_do_section .what_we_do_info {
     gap: 20px;
+  }
+  .activity_page .for_environment_section .environment_wrapper {
+    gap: 40px;
   }
 }
 @media (max-width: 820px) {
@@ -208,9 +291,30 @@
   .activity_page .what_we_do_section .what_we_do_info .info_header {
     gap: 7px;
   }
+  .activity_page
+    .for_environment_section
+    .environment_wrapper
+    .environment_header
+    h1 {
+    font-size: 30px;
+  }
+  .activity_page
+    .for_environment_section
+    .environment_wrapper
+    .environment_info {
+    display: flex;
+    flex-direction: column;
+  }
 }
 @media (max-width: 350px) {
   .activity_page .what_we_do_section .what_we_do_info .info_body p {
     font-size: 14px;
+  }
+  .activity_page
+    .for_environment_section
+    .environment_wrapper
+    .environment_info
+    .environment_card {
+    gap: 15px;
   }
 }
