--- a/src/pages/Activity/activity.scss
+++ b/src/pages/Activity/activity.scss
@@ -128,6 +128,30 @@
       }
     }
   }
+  .projects_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    .projects_header {
+      gap: 0px;
+      .empty_line {
+        display: none;
+      }
+      .projects_header_content {
+        width: 100%;
+        gap: 16px;
+        h3 {
+          width: 100%;
+          text-align: center;
+        }
+        h1 {
+          text-align: center;
+          width: 750px;
+          margin: 0 auto;
+          font-size: 48px;
+        }
+      }
+    }
+  }
 }
 
 // media queries
@@ -138,6 +162,9 @@
   .activity_page .for_environment_section {
     padding: 96px 25px;
   }
+  .activity_page .projects_section {
+    padding: 96px 25px;
+  }
 }
 @media (max-width: 999px) {
   .activity_page .what_we_do_section {
@@ -145,6 +172,18 @@
   }
   .activity_page .for_environment_section {
     padding: 85px 20px;
+  }
+  .activity_page .projects_section {
+    padding: 85px 20px;
+  }
+}
+@media (max-width: 800px) {
+  .activity_page
+    .projects_section
+    .projects_header
+    .projects_header_content
+    h1 {
+    width: 100%;
   }
 }
 @media (max-width: 750px) {
@@ -154,6 +193,9 @@
   .activity_page .for_environment_section {
     padding: 70px 15px;
   }
+  .activity_page .projects_section {
+    padding: 70px 10px;
+  }
 }
 @media (max-width: 600px) {
   .activity_page .what_we_do_section {
@@ -161,6 +203,16 @@
   }
   .activity_page .for_environment_section {
     padding: 50px 10px;
+  }
+  .activity_page .projects_section {
+    padding: 50px 10px;
+  }
+  .activity_page
+    .projects_section
+    .projects_header
+    .projects_header_content
+    h1 {
+    font-size: 35px;
   }
 }
 
@@ -304,6 +356,13 @@
     .environment_info {
     display: flex;
     flex-direction: column;
+  }
+  .activity_page
+    .projects_section
+    .projects_header
+    .projects_header_content
+    h1 {
+    font-size: 30px;
   }
 }
 @media (max-width: 350px) {
