--- a/src/pages/Activity/activity.scss
+++ b/src/pages/Activity/activity.scss
@@ -152,6 +152,60 @@
       }
     }
   }
+  .join_team_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .join_team_wrapper {
+      height: 384px;
+      width: 100%;
+    }
+  }
+  .news_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .news_wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 48px;
+      .news_header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 24px;
+        h1 {
+          width: 275px;
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 40px;
+          line-height: 140%;
+          color: #1d2130;
+        }
+        .empty_line {
+          width: calc(100% - 275px - 24px);
+          height: 1px;
+          background-color: #e5e5e5;
+        }
+      }
+      .news_body {
+        width: 100%;
+      }
+    }
+  }
+  .events_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    padding-top: 0;
+    .events_wrapper {
+      width: 100%;
+    }
+  }
 }
 
 // media queries
@@ -165,6 +219,18 @@
   .activity_page .projects_section {
     padding: 96px 25px;
   }
+  .activity_page .join_team_section {
+    padding: 96px 25px;
+    padding-top: 0;
+  }
+  .activity_page .news_section {
+    padding: 96px 25px;
+    padding-top: 0;
+  }
+  .activity_page .events_section {
+    padding: 96px 25px;
+    padding-top: 0;
+  }
 }
 @media (max-width: 999px) {
   .activity_page .what_we_do_section {
@@ -175,6 +241,18 @@
   }
   .activity_page .projects_section {
     padding: 85px 20px;
+  }
+  .activity_page .join_team_section {
+    padding: 85px 20px;
+    padding-top: 0;
+  }
+  .activity_page .news_section {
+    padding: 85px 20px;
+    padding-top: 0;
+  }
+  .activity_page .events_section {
+    padding: 85px 20px;
+    padding-top: 0;
   }
 }
 @media (max-width: 800px) {
@@ -196,6 +274,18 @@
   .activity_page .projects_section {
     padding: 70px 10px;
   }
+  .activity_page .join_team_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
+  .activity_page .news_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
+  .activity_page .events_section {
+    padding: 70px 15px;
+    padding-top: 0;
+  }
 }
 @media (max-width: 600px) {
   .activity_page .what_we_do_section {
@@ -206,6 +296,18 @@
   }
   .activity_page .projects_section {
     padding: 50px 10px;
+  }
+  .activity_page .join_team_section {
+    padding: 50px 10px;
+    padding-top: 0;
+  }
+  .activity_page .news_section {
+    padding: 50px 10px;
+    padding-top: 0;
+  }
+  .activity_page .events_section {
+    padding: 50px 10px;
+    padding-top: 0;
   }
   .activity_page
     .projects_section
@@ -284,6 +386,9 @@
   .activity_page .for_environment_section .environment_wrapper {
     gap: 40px;
   }
+  .activity_page .join_team_section .join_team_wrapper {
+    height: 340px;
+  }
 }
 @media (max-width: 820px) {
   .activity_page .what_we_do_section .what_we_do_info .info_header .empty_line {
@@ -299,6 +404,9 @@
   .activity_page .what_we_do_section .what_we_do_img {
     width: calc(100% - 380px - 30px);
   }
+  .activity_page .news_section .news_wrapper {
+    gap: 20px;
+  }
 }
 @media (max-width: 700px) {
   .what_we_do_section {
@@ -313,6 +421,18 @@
   }
   .activity_page .what_we_do_section .what_we_do_img {
     width: 100%;
+  }
+  .activity_page .join_team_section .join_team_wrapper {
+    height: 300px;
+  }
+}
+@media (max-width: 500px) {
+  .activity_page .news_section .news_wrapper .news_header .empty_line {
+    display: none;
+  }
+  .activity_page .news_section .news_wrapper .news_header h1 {
+    width: 100%;
+    font-size: 35px;
   }
 }
 @media (max-width: 450px) {
@@ -375,5 +495,8 @@
     .environment_info
     .environment_card {
     gap: 15px;
+  }
+  .activity_page .news_section .news_wrapper .news_header h1 {
+    font-size: 30px;
   }
 }
