--- a/src/pages/ContactUs/contact.scss
+++ b/src/pages/ContactUs/contact.scss
@@ -115,6 +115,138 @@
       }
     }
   }
+  .form_section {
+    width: 100%;
+    padding: 96px calc((100% - 1500px) / 2);
+    .form_wrapper {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      form {
+        width: 768px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 32px;
+        > div {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          gap: 32px;
+          .inner_div {
+            width: calc(50% - 16px);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 8px;
+            label {
+              width: 100%;
+              font-family: "Roboto", sans-serif;
+              font-style: normal;
+              font-weight: 700;
+              font-size: 12px;
+              line-height: 160%;
+              color: #1d2130;
+              opacity: 0.6;
+            }
+            input {
+              width: 100%;
+              padding-bottom: 4px;
+              border: none;
+              outline: none;
+              border-bottom: 1px solid #e5e5e5;
+              border-radius: 0;
+              background: none;
+              font-family: "Roboto", sans-serif;
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 160%;
+              color: #1d2130;
+              opacity: 1;
+              &::placeholder {
+                font-family: "Roboto", sans-serif;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 160%;
+                color: #1d2130;
+              }
+            }
+          }
+        }
+        .comments {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 4px;
+          label {
+            width: 100%;
+            font-family: "Roboto", sans-serif;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 160%;
+            color: #1d2130;
+            opacity: 0.6;
+          }
+          textarea {
+            border: 1px solid #e5e5e5;
+            border-radius: 4px;
+            outline: none;
+            width: 100%;
+            height: 156px;
+            padding: 20px;
+            font-family: "Roboto", sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 160%;
+            color: #1d2130;
+            // opacity: 0.3;
+            &::placeholder {
+              font-family: "Roboto", sans-serif;
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 160%;
+              color: #1d2130;
+              opacity: 0.5;
+            }
+          }
+        }
+        button {
+          margin: 0 auto;
+          background: #70c174;
+          border-radius: 4px;
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 19px;
+          color: #ffffff;
+          padding: 16px 32px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border: 1px solid #70c174;
+          outline: none;
+          cursor: pointer;
+          transition: 0.3s linear all;
+          &:hover {
+            background: none;
+            color: #70c174;
+          }
+        }
+      }
+    }
+  }
 }
 
 // res media queries
@@ -122,9 +254,15 @@
   .contact_page .contact_us_section {
     padding: 96px 25px;
   }
+  .contact_page .form_section {
+    padding: 96px 25px;
+  }
 }
 @media (max-width: 999px) {
   .contact_page .contact_us_section {
+    padding: 85px 20px;
+  }
+  .contact_page .form_section {
     padding: 85px 20px;
   }
 }
@@ -132,9 +270,15 @@
   .contact_page .contact_us_section {
     padding: 70px 15px;
   }
+  .contact_page .form_section {
+    padding: 70px 15px;
+  }
 }
 @media (max-width: 600px) {
   .contact_page .contact_us_section {
+    padding: 50px 10px;
+  }
+  .contact_page .form_section {
     padding: 50px 10px;
   }
 }
@@ -189,6 +333,9 @@
   .contact_page .contact_us_section .contact_wrapper .contact_main {
     width: calc(100% - 40px - 286px);
   }
+  .contact_page .form_section .form_wrapper form {
+    width: 100%;
+  }
 }
 @media (max-width: 750px) {
   .contact_page .contact_us_section .contact_wrapper {
@@ -240,6 +387,19 @@
   .contact_page .contact_us_section .contact_wrapper .contact_details {
     padding-left: 35px;
   }
+  .contact_page .form_section .form_wrapper form {
+    gap: 25px;
+  }
+  .contact_page .form_section .form_wrapper form > div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 25px;
+  }
+  .contact_page .form_section .form_wrapper form > div .inner_div {
+    width: 100%;
+  }
 }
 @media (max-width: 450px) {
   .contact_page
@@ -262,5 +422,11 @@
   }
   .contact_page .contact_us_section .contact_wrapper .contact_details {
     gap: 7px;
+  }
+  .contact_page .form_section .form_wrapper form .comments textarea {
+    height: 120px;
+  }
+  .contact_page .form_section .form_wrapper form button {
+    width: 100%;
   }
 }
