--- a/src/pages/Donation/donation.scss
+++ b/src/pages/Donation/donation.scss
@@ -106,12 +106,96 @@
       width: 100%;
       padding: 96px calc((100% - 1500px) / 2);
       background: #ffffff;
+      .contributing_wrapper {
+        width: 100%;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 96px;
+        .contributing_info {
+          width: calc(100% - 590px - 96px);
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 24px;
+          h1 {
+            font-family: "Roboto", sans-serif;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 48px;
+            line-height: 120%;
+            color: #1d2130;
+          }
+          p {
+            font-family: "Roboto", sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 160%;
+
+            color: #525560;
+          }
+        }
+        .contributing_tab {
+          width: 590px;
+          .ant-tabs {
+            width: 100%;
+            .ant-tabs-nav {
+              margin: 0;
+              margin-bottom: 24px;
+              .ant-tabs-nav-wrap {
+                .ant-tabs-nav-list {
+                  .ant-tabs-tab {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    .ant-tabs-tab-btn {
+                      font-family: "Roboto", sans-serif;
+                      font-style: normal;
+                      font-weight: 500;
+                      font-size: 16px;
+                      line-height: 160%;
+                      color: #1d2130;
+                    }
+                  }
+                  .ant-tabs-tab-active {
+                    .ant-tabs-tab-btn {
+                      text-shadow: none;
+                    }
+                  }
+                  .ant-tabs-ink-bar {
+                    background: #70c174;
+                  }
+                }
+              }
+            }
+            .ant-tabs-content-holder {
+              width: 100%;
+              .ant-tabs-content {
+                width: 100%;
+                .ant-tabs-tabpane {
+                  font-family: "Roboto", sans-serif;
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 16px;
+                  line-height: 160%;
+                  color: #525560;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
 
 @media (max-width: 1550px) {
   .donation_page .donation_wrapper .donating_section {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  .donation_page .donation_wrapper .contributing_section {
     padding-left: 25px;
     padding-right: 25px;
   }
@@ -132,6 +216,23 @@
     .body_info
     p {
     width: 90%;
+  }
+  .donation_page .donation_wrapper .contributing_section .contributing_wrapper {
+    gap: 30px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info {
+    width: calc(100% - 30px - 550px);
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab {
+    width: 550px;
   }
 }
 @media (max-width: 1220px) {
@@ -176,6 +277,22 @@
     padding-left: 65px;
   }
 }
+@media (max-width: 1150px) {
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab {
+    width: 450px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info {
+    width: calc(100% - 480px);
+  }
+}
 @media (max-width: 1080px) {
   .donation_page .donation_wrapper .donating_section .donating_section_img {
     width: calc(100% - 520px);
@@ -185,6 +302,22 @@
   }
   .donation_page .donation_wrapper .donating_section {
     gap: 40px;
+  }
+}
+@media (max-width: 1050px) {
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab {
+    width: 400px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info {
+    width: calc(100% - 430px);
   }
 }
 @media (max-width: 1000px) {
@@ -205,6 +338,15 @@
   }
   .donation_page .donation_wrapper .donating_section .donating_section_img {
     width: calc(100% - 465px);
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info
+    h1 {
+    font-size: 38px;
+    line-height: 43px;
   }
 }
 @media (max-width: 950px) {
@@ -248,6 +390,24 @@
     max-height: 270px;
     padding-right: 15px;
   }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info
+    h1 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info {
+    max-height: 230px;
+    overflow-y: auto;
+    padding-right: 15px;
+  }
 }
 @media (max-width: 850px) {
   .donation_page
@@ -284,6 +444,38 @@
     p {
     font-size: 15px;
   }
+  .donation_page .donation_wrapper .contributing_section {
+    padding: 45px 15px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info
+    h1 {
+    font-size: 30px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info
+    p {
+    font-size: 15px;
+    line-height: 21px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab
+    .ant-tabs
+    .ant-tabs-content-holder
+    .ant-tabs-content
+    .ant-tabs-tabpane {
+    font-size: 15px;
+    line-height: 21px;
+  }
 }
 @media (max-width: 700px) {
   .donation_page .donation_wrapper .donating_section {
@@ -302,11 +494,36 @@
     width: 100%;
     padding-left: 35px;
   }
+  .donation_page .donation_wrapper .contributing_section .contributing_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info {
+    width: 100%;
+    max-height: inherit;
+    padding: 0;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab {
+    width: 100%;
+  }
 }
 @media (max-width: 600px) {
   .donation_page .donation_wrapper .donating_section {
     padding: 35px 10px;
     padding-top: 86px;
+  }
+  .donation_page .donation_wrapper .contributing_section {
+    padding: 35px 10px;
   }
 }
 @media (max-width: 500px) {
@@ -327,6 +544,53 @@
     .body_info
     button {
     margin-top: 0;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info {
+    gap: 15px;
+  }
+  .donation_page .donation_wrapper .contributing_section .contributing_wrapper {
+    gap: 24px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab
+    .ant-tabs
+    .ant-tabs-nav
+    .ant-tabs-nav-wrap
+    .ant-tabs-nav-list
+    .ant-tabs-tab
+    .ant-tabs-tab-btn {
+    font-size: 15px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab
+    .ant-tabs
+    .ant-tabs-nav
+    .ant-tabs-nav-wrap
+    .ant-tabs-nav-list
+    .ant-tabs-tab {
+    margin-left: 16px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_tab
+    .ant-tabs
+    .ant-tabs-nav
+    .ant-tabs-nav-wrap
+    .ant-tabs-nav-list
+    .ant-tabs-tab:first-child {
+    margin-left: 0;
   }
 }
 @media (max-width: 400px) {
@@ -379,5 +643,14 @@
   }
   .donation_page .donation_wrapper .donating_section .donating_section_img {
     padding-left: 22px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info
+    h1 {
+    font-size: 30px;
+    line-height: 35px;
   }
 }
