--- a/src/pages/Donation/donation.scss
+++ b/src/pages/Donation/donation.scss
@@ -189,6 +189,44 @@
         }
       }
     }
+    .donation_usage_section {
+      background: #ffffff;
+      padding: 96px calc((100% - 1500px) / 2);
+      padding-top: 0;
+      width: 100%;
+      .donation_usage_wrapper {
+        width: 100%;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 96px;
+        .usage_header {
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 48px;
+          line-height: 120%;
+          color: #1d2130;
+          width: 374px;
+        }
+        .usage_body {
+          width: calc(100% - 374px - 96px);
+          display: flex;
+          align-items: flex-start;
+          justify-content: space-between;
+          gap: 96px;
+          > div {
+            font-family: "Roboto", sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 160%;
+            color: #525560;
+            width: calc(50% - 48px);
+          }
+        }
+      }
+    }
   }
 }
 
@@ -198,6 +236,10 @@
     padding-right: 25px;
   }
   .donation_page .donation_wrapper .contributing_section {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  .donation_page .donation_wrapper .donation_usage_section {
     padding-left: 25px;
     padding-right: 25px;
   }
@@ -278,6 +320,28 @@
     .body_info {
     padding-left: 65px;
   }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper {
+    gap: 40px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_body {
+    width: calc(100% - 374px - 40px);
+    gap: 40px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_body
+    > div {
+    width: calc(50% - 20px);
+  }
 }
 @media (max-width: 1150px) {
   .donation_page
@@ -350,6 +414,20 @@
     font-size: 38px;
     line-height: 43px;
   }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_header {
+    width: 300px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_body {
+    width: calc(100% - 340px);
+  }
 }
 @media (max-width: 950px) {
   .donation_page .donation_wrapper .donating_section .donating_section_body {
@@ -381,6 +459,29 @@
     .donating_section_body
     .body_info {
     padding-left: 35px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_header {
+    width: 100%;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_body {
+    width: 100%;
   }
 }
 @media (max-width: 900px) {
@@ -481,6 +582,18 @@
     font-size: 15px;
     line-height: 21px;
   }
+  .donation_page .donation_wrapper .donation_usage_section {
+    padding: 45px 15px;
+    padding-top: 0;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_header {
+    font-size: 35px;
+    line-height: 42px;
+  }
 }
 @media (max-width: 700px) {
   .donation_page .donation_wrapper .donating_section {
@@ -521,6 +634,31 @@
     .contributing_tab {
     width: 100%;
   }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper {
+    gap: 20px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_body
+    > div {
+    width: 100%;
+  }
 }
 @media (max-width: 600px) {
   .donation_page .donation_wrapper .donating_section {
@@ -532,6 +670,10 @@
   }
   .donation_page .donation_wrapper .contributing_section .contributing_wrapper {
     padding-bottom: 35px;
+  }
+  .donation_page .donation_wrapper .donation_usage_section {
+    padding: 35px 10px;
+    padding-top: 0;
   }
 }
 @media (max-width: 500px) {
@@ -660,5 +802,22 @@
     h1 {
     font-size: 30px;
     line-height: 35px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_header {
+    font-size: 30px;
+    line-height: 35px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donation_usage_section
+    .donation_usage_wrapper
+    .usage_body
+    > div {
+    font-size: 14px;
+    line-height: 22px;
   }
 }
