--- a/src/pages/FullEvent/fullEvent.scss
+++ b/src/pages/FullEvent/fullEvent.scss
@@ -66,6 +66,135 @@
         color: #525560;
       }
     }
+    .other_events {
+      width: 100%;
+      padding: 96px calc((100% - 768px) / 2);
+      padding-top: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 48px;
+      .other_events_header {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 24px;
+        h1 {
+          font-family: "Roboto", sans-serif;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 40px;
+          line-height: 150%;
+          color: #1d2130;
+        }
+        .empty_line {
+          width: calc(100% - 24px - 230px);
+          height: 1px;
+          background: #e5e5e5;
+        }
+      }
+      .other_events_body {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 24px;
+        .other_event_card {
+          width: 100%;
+          padding: 32px 40px;
+          background: #bef3c0;
+          border-radius: 8px;
+          border: none;
+          outline: none;
+          .other_event_wrapper {
+            width: 100%;
+            .card_info {
+              width: 100%;
+              display: flex;
+              align-items: flex-start;
+              justify-content: space-between;
+              gap: 24px;
+              .card_date {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-start;
+                gap: 0;
+                h1 {
+                  font-family: "Roboto", sans-serif;
+                  font-style: normal;
+                  font-weight: 500;
+                  font-size: 48px;
+                  line-height: 120%;
+                  font-variant: small-caps;
+                  color: #1d2130;
+                }
+                p {
+                  font-family: "Roboto", sans-serif;
+                  font-style: normal;
+                  font-weight: 500;
+                  font-size: 16px;
+                  line-height: 19px;
+                  letter-spacing: 2px;
+                  text-transform: uppercase;
+                  color: #1d2130;
+                }
+              }
+              .card_details {
+                width: calc(100% - 55px - 56px - 48px);
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-start;
+                gap: 8px;
+                .details_header {
+                  display: flex;
+                  align-items: center;
+                  justify-content: flex-start;
+                  gap: 23px;
+                  h2 {
+                    font-family: "Roboto", sans-serif;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 19px;
+                    letter-spacing: 2px;
+                    text-transform: uppercase;
+                    color: #1d2130;
+                  }
+                  .empty_line {
+                    width: 44px;
+                    height: 2px;
+                    background: #1d2130;
+                  }
+                }
+                h1 {
+                  font-family: "Roboto", sans-serif;
+                  font-style: normal;
+                  font-weight: 700;
+                  font-size: 28px;
+                  line-height: 150%;
+                  color: #1d2130;
+                }
+              }
+              > a {
+                width: 56px;
+                height: 56px;
+                background: #ffffff;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
 
@@ -76,6 +205,9 @@
   .single_event_page .single_event_wrapper .single_event_body {
     padding: 60px calc((100% - 768px) / 2);
   }
+  .single_event_page .single_event_wrapper .other_events {
+    padding-bottom: 60px;
+  }
 }
 @media (max-width: 850px) {
   .single_event_page .single_event_wrapper .single_event_header {
@@ -83,6 +215,10 @@
   }
   .single_event_page .single_event_wrapper .single_event_body {
     padding: 55px 20px;
+  }
+  .single_event_page .single_event_wrapper .other_events {
+    padding: 55px 20px;
+    padding-top: 0;
   }
 }
 @media (max-width: 750px) {
@@ -103,6 +239,27 @@
   }
   .single_event_page .single_event_wrapper .single_event_body {
     padding: 35px 10px;
+  }
+  .single_event_page .single_event_wrapper .other_events {
+    padding: 35px 10px;
+    padding-top: 0;
+    gap: 25px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card {
+    padding: 25px 35px;
+  }
+}
+@media (max-width: 550px) {
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card {
+    padding: 15px 10px;
   }
 }
 @media (max-width: 500px) {
@@ -127,6 +284,76 @@
   .single_event_page .single_event_wrapper .single_event_body {
     gap: 25px;
   }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_date
+    h1 {
+    font-size: 45px;
+    line-height: 120%;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_date
+    p {
+    font-size: 15px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details
+    h1 {
+    font-size: 25px;
+    line-height: 30px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details
+    .details_header
+    h2 {
+    font-size: 15px;
+    line-height: 21px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details {
+    gap: 5px;
+    width: calc(100% - 51px - 46px - 48px);
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    > a {
+    width: 46px;
+    height: 46px;
+  }
 }
 @media (max-width: 400px) {
   .single_event_page .single_event_wrapper .single_event_header h1 {
@@ -140,5 +367,132 @@
   .single_event_page .single_event_wrapper .single_event_body p {
     font-size: 14px;
     line-height: 22px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_header
+    h1 {
+    font-size: 30px;
+    line-height: 36px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_header
+    .empty_line {
+    display: none;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_date
+    h1 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_date
+    p {
+    font-size: 14px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details
+    .details_header
+    h2 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details
+    .details_header {
+    gap: 8px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details
+    .details_header
+    .empty_line {
+    width: 30px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details
+    h1 {
+    font-size: 20px;
+    line-height: 27px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    > a {
+    width: 30px;
+    height: 30px;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    > a
+    img {
+    zoom: 0.6;
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info
+    .card_details {
+    width: calc(100% - 35px - 60px);
+  }
+  .single_event_page
+    .single_event_wrapper
+    .other_events
+    .other_events_body
+    .other_event_card
+    .other_event_wrapper
+    .card_info {
+    gap: 15px;
   }
 }
